skills check two
Added author and title, created new paragraph.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My First Website</title>
+        <meta name="author" content="Noah Wright">
+        <title>CE Truffaut | Web Developer</title>
     </head>
     <body>
-       Hello, World, and welcome to my first website!
+       <p>Hello, World, and welcome to my first website!</p>
+       <p>If we keep holding onto yesterday, what are we going to be tomorrow?</p>
     </body>
 </html>
