--- a/planets-table/index.html
+++ b/planets-table/index.html
@@ -57,7 +57,7 @@
                    <td>167</td>
                    <td>0</td>
                    <td>Closest to the Sun</td>
-                   <td><img src="images/Mercury.jpg" alt="mercury bad hair day"></td>
+                   <td><img src="images/mercury.jpg" alt="mercury bad hair day"></td>
                 </tr>
                 <tr>
                     <th scope="row">Venus</th>
@@ -70,7 +70,7 @@
                     <td>464</td>
                     <td>0</td>
                     <td></td>
-                    <td><img src="images/Venus.jpg" alt="venus looking good"></td>
+                    <td><img src="images/venus.jpg" alt="venus looking good"></td>
                 </tr>
                 <tr>
                     <th scope="row">Earth</th>
